# test-mem-prof

./: README.md  api-client.py  create_model.py  main.py  pyproject.toml  simple_model.keras
